<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.splash.SplashActivity">

    <ImageView
        android:translationY="-150dp"
        android:id="@+id/imgLogo"
        android:layout_marginBottom="18dp"
        app:srcCompat="@drawable/cat_logo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvTitle"
        android:contentDescription="@string/image_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"/>

    <TextView
        android:text="@string/app_name"
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:alpha="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"/>
    <TextView
        android:text="@string/app_subtitle"
        android:id="@+id/tvSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:alpha="0"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

    <TextView
        android:translationY="150dp"
        android:id="@+id/tvVersion"
        android:text="@string/version_app"
        android:layout_marginBottom="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>