<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/app_name" />


            <TextView
                android:id="@+id/tvAltName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvName"
                tools:text="Alt name" />
            <HorizontalScrollView
                android:id="@+id/rootChip"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAltName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:singleLine="true"/>
            </HorizontalScrollView>



            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rootChip">


                <TextView
                    android:id="@+id/tvTitleOrigin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/origin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/tvOrigin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvOrigin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:layout_constraintLeft_toRightOf="@+id/tvTitleOrigin"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="United states" />

                <TextView
                    android:id="@+id/tvTitleLifeSpan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/life_span"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/tvOrigin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitleOrigin" />

                <TextView
                    android:id="@+id/tvLifeSpan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:layout_constraintLeft_toRightOf="@+id/tvTitleOrigin"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tvTitleLifeSpan"
                    tools:text="9 - 12" />


                <TextView
                    android:id="@+id/tvTitleAdaptability"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/adaptability"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/tvOrigin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitleLifeSpan" />


                <androidx.appcompat.widget.AppCompatRatingBar
                    android:id="@+id/ratingAdaptability"
                    style="?attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="false"
                    android:numStars="5"
                    android:rating="0"
                    android:stepSize="1"
                    app:layout_constraintLeft_toRightOf="@+id/tvTitleAdaptability"
                    app:layout_constraintTop_toTopOf="@+id/tvTitleAdaptability" />


                <TextView
                    android:id="@+id/tvTitleAffection"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/affection"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/tvOrigin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitleAdaptability" />


                <androidx.appcompat.widget.AppCompatRatingBar
                    android:id="@+id/ratingAffection"
                    style="?attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="false"
                    android:numStars="5"
                    android:rating="0"
                    android:stepSize="1"
                    app:layout_constraintLeft_toRightOf="@+id/tvTitleAffection"
                    app:layout_constraintTop_toTopOf="@+id/tvTitleAffection" />



                <TextView
                    android:id="@+id/tvTitleEnergy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/energy"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/tvOrigin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitleAffection" />


                <androidx.appcompat.widget.AppCompatRatingBar
                    android:id="@+id/ratingEnergy"
                    style="?attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="false"
                    android:numStars="5"
                    android:rating="0"
                    android:stepSize="1"
                    app:layout_constraintLeft_toRightOf="@+id/tvTitleEnergy"
                    app:layout_constraintTop_toTopOf="@+id/tvTitleEnergy" />


                <TextView
                    android:id="@+id/tvTitleIntelligence"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/intelligence"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/tvOrigin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitleEnergy" />


                <androidx.appcompat.widget.AppCompatRatingBar
                    android:id="@+id/ratingIntelligence"
                    style="?attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="false"
                    android:numStars="5"
                    android:rating="0"
                    android:stepSize="1"
                    app:layout_constraintLeft_toRightOf="@+id/tvTitleIntelligence"
                    app:layout_constraintTop_toTopOf="@+id/tvTitleIntelligence" />

                <TextView
                    android:id="@+id/tvTitleHealth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/health_issue"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/tvOrigin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitleIntelligence" />


                <androidx.appcompat.widget.AppCompatRatingBar
                    android:id="@+id/ratingHealth"
                    style="?attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="false"
                    android:numStars="5"
                    android:rating="0"
                    android:stepSize="1"
                    app:layout_constraintLeft_toRightOf="@+id/tvTitleHealth"
                    app:layout_constraintTop_toTopOf="@+id/tvTitleHealth" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageButton
                android:id="@+id/toggleExpandTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/transparent"
                android:paddingHorizontal="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutDetail"
                app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvTitleDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/descreption"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitleDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleDetail" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnWiki"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/wikipedia" />
</androidx.appcompat.widget.LinearLayoutCompat>